# projecto-final-proyecto-extended-mix

./: .gitignore  README.md
pong_ai/: CMakeLists.txt  trained_params.txt
pong_ai/data/: input.csv  output.csv
pong_ai/include/utec/agent/: EnvGym.h  PongAgent.h  State.h
pong_ai/include/utec/algebra/: Tensor.h
pong_ai/include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h  sequential.h
pong_ai/include/utec/parallel/: ConcurrentQueue.h  ParallelAgent.h  ThreadPool.h
pong_ai/src/: train.cpp
pong_ai/tests/: test_agent_env.cpp  test_concurrent_queue.cpp  test_neural_network.cpp  test_parallel_agent.cpp  test_tensor.cpp  test_thread_pool.cpp
